# sample-compliance-assistant-with-agents

./: .env  .gitignore  README.md  pyproject.toml
knowledge/: user_preference.txt
src/compliance_assistant/: crew.py  main.py
src/compliance_assistant/config/: agents.yaml  tasks.yaml
src/compliance_assistant/tools/: .env  brAgentTool.py
